archivos completos para template TX

--- a/BaseTX/src/app/layout/completo/breadcum/breadcum.component.html
+++ b/BaseTX/src/app/layout/completo/breadcum/breadcum.component.html
@@ -8,7 +8,7 @@
             <div id="hbreadcrumb" class="pull-right">
                 <ol class="hbreadcrumb breadcrumb">
                     <li>
-                        <a [routerLink]="[ '/monitor' ]">INICIO</a>
+                        <a [routerLink]="[ '/inicio' ]">INICIO</a>
                     </li>
                     <!--
                     <li>
