--- a/BaseTX/src/app/layout/completoMenu/header-cm/header-cm.component.html
+++ b/BaseTX/src/app/layout/completoMenu/header-cm/header-cm.component.html
@@ -6,7 +6,7 @@
         <img src="assets/images/logo.jpg" style="border: 1px solid red;width: 40px;height: 40px;margin: 4px 0px -1px 6px;padding-top: 0px;" alt="Logo">
     </div>
     <div id="logo" class="light-version" style="height: 39px">
-        <span>MONITOR</span>
+        <span>BASE</span>
         <br>
         <span style="top: -5px;
       color: red;
@@ -18,7 +18,7 @@
         </div>
         <div class="small-logo">
             <span class="text-primary" id="spnHeadMobile">
-              MONITOR 
+              BASE 
               <a style="color: red; cursor: text;">TX</a>
           </span>
         </div>
@@ -39,7 +39,7 @@
                       </a>
                     </li>
                     <li>
-                        <a href="#" [routerLink]="[ '/monitor' ]" routerLinkActive="active">
+                        <a href="#" [routerLink]="[ '/BASE' ]" routerLinkActive="active">
                             <i class="fa fa-bolt"></i>
                         </a>
                     </li>
@@ -50,7 +50,7 @@
         <div class="navbar-right">
             <ul class="nav navbar-nav no-borders">
                 <li>
-                    <a href="#" [routerLink]="[ '/monitor' ]" routerLinkActive="active">
+                    <a href="#" [routerLink]="[ '/BASE' ]" routerLinkActive="active">
                         <i class="fa fa-bolt"></i>
                     </a>
                 </li>
