--- a/BaseTX/src/app/layout/completo/header/header.component.html
+++ b/BaseTX/src/app/layout/completo/header/header.component.html
@@ -6,7 +6,7 @@
         <img src="assets/images/logo.jpg" style="border: 1px solid red;width: 40px;height: 40px;margin: 4px 0px -1px 6px;padding-top: 0px;" alt="Logo">
     </div>
     <div id="logo" class="light-version" style="height: 39px">
-        <span>inicio</span>
+        <span>BASE</span>
         <br>
         <span style="top: -5px;
         color: red;
@@ -18,7 +18,7 @@
         </div>-->
         <div class="small-logo">
             <span class="text-primary" id="spnHeadMobile">
-                inicio 
+                BASE 
                 <a style="color: red; cursor: text;">TX</a>
             </span>
         </div>
